# cognition-hackathon

./: .gitignore  Dockerfile  Makefile  PRD.md  README.md  modal_execution_example.py  modal_online.py  nixpacks.toml  platform_comparison.md  pyproject.toml  railway.json  requirements.txt
agents/: analysis_agent.py  experimentation_agent.py  implementation_agent.py  strategy_agent.py
frontend/: README.md
frontend/public/: app.js  index.html
results/: GELU_vs_ReLU_with_DepthwiseConv_code_702ada0d.py  GELU_vs_ReLU_with_DepthwiseConv_code_78e80db6.py  GELU_vs_ReLU_with_DepthwiseConv_code_ad17e2a8.py  Test_Fix_Cycle_code_aa9d91b9.py
scripts/: modal_execution_runtime.ipynb
server/: README.md  index.js  main.py  package.json  test_codegen.py
server/tests/: run_all_tests.py  test_codegen.py  test_codegen_fix.py  test_fix.py
src/: modal_execution.py
src/frontend/: README.md  next.config.js  package-lock.json  server.js  (+4 more)
src/server/: .env.example  Makefile  README.md  __init__.py  main.py  modal_integration.py  orchestrator.py  orchestrator_app.py  pyproject.toml  requirements_modal.txt  run_orchestrator.py  temp_experiment.py  test_integration.py  test_quick.py
src/server/agents/: analysis_agent.py  debugger_agent.py  experimentation_agent.py  implementation_agent.py  strategy_agent.py
src/server/src/: endpoints.py  orchestrator.py  orchestrator_api.py
src/server/src/agents/: analysis_agent.py  conceptualization_agent.py  evaluator_agent.py  experimentation_agent.py  experimentation_agent_smart.py
src/server/src/modal/: modal_config.py  modal_service.py
(+21 files in other folders)
